force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__ClinicalServiceRequestStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClinicalServiceRequestStartDate__c</fullName>
    <label>Clinical Service Request Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClinicalServiceRequestStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>