force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__ClinicalServiceRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClinicalServiceRequestStatus__c</fullName>
    <label>Clinical Service Request Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClinicalServiceRequestStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>