force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__ClinicalServiceRqstPreqCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClinicalServiceRqstPreqCodeId__c</fullName>
    <label>Clinical Service Rqst Preq Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClinicalServiceRqstPreqCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>