force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__HasPrerequisites__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasPrerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Prerequisites</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasPrerequisites</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>