force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__HealthcareFacilityCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareFacilityCodeId__c</fullName>
    <label>Healthcare Facility Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareFacilityCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>