force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__HealthcarePerformerTypeCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcarePerformerTypeCodeId__c</fullName>
    <label>Healthcare Performer Type Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcarePerformerTypeCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>