force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__OriginalClinicalServiceRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginalClinicalServiceRequestId__c</fullName>
    <label>Original Clinical Service Request</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginalClinicalServiceRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>