force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__PatientHealthConditionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PatientHealthConditionId__c</fullName>
    <label>Patient Health Condition</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PatientHealthConditionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>