force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__PatientInstructionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PatientInstructionText__c</fullName>
    <label>Patient Instruction</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PatientInstructionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>