force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__QuantityNumeratorNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityNumeratorNumber__c</fullName>
    <label>Quantity Numerator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityNumeratorNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>