force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__QuantityNumeratorUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityNumeratorUnitOfMeasureId__c</fullName>
    <label>Quantity Numerator Unit of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityNumeratorUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>