force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__rel_1716723209533_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723209533_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClinicalServiceRequest_ClinicalServi_rel</label>
    <referenceTo>ssot__ClinicalServiceRequestIdentifier__dlm</referenceTo>
    <relationshipLabel>ClinicalServiceRequest_ClinicalServi_rel</relationshipLabel>
    <relationshipName>rel_1716723209533_end</relationshipName>
    <type>Lookup</type>
</CustomField>