force-app/main/default/objects/ssot__ClinicalServiceRequest__dlm/fields/ssot__RequestCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestCodeId__c</fullName>
    <label>Request Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>